--- a/assets/css/detailStyle.css
+++ b/assets/css/detailStyle.css
@@ -3,3 +3,10 @@
     flex-direction: column;
     align-items: flex-start;
 }
+
+.Contact-User {
+    border-radius: 30px;
+    background: aqua;
+    padding: 5px 10px;
+    margin-top: 25px;
+}
