an update commit 4:20 11/29

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -63,3 +63,10 @@ svg.LgbsSe-Bz112c {
     display: block;
     width: 14px;    
 }
+.invalid span {
+    color: red;
+
+}
+.invalid input{
+    border: 1px solid red;
+}
