--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -50,6 +50,12 @@
     box-shadow: 0px 0px 2px rgba(221, 5, 23, 0.8);
 }
 
+.form-group.valid .form-control,
+.form-group.valid textarea {
+    border: 1px solid rgb(161 255 177) !important;
+    box-shadow: 0px 0px 2px rgb(161 255 177);
+}
+
 .form-group .message_error {
     color: #f33a58;
 }
